--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv='Cache-Control' content='no-cache, no-store, must-revalidate'>
     <meta http-equiv='Expires' content='-1'>
     <meta http-equiv='Pragma' content='no-cache'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
   	<title>React-selectr Demo</title>
   </head>
   <body>
